--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "        destinations.append(index[travel_destinations])\n",
     "        money = len(destinations)\n",
     "        \n",
-    "    pass\n",
+    "    return money\n",
     "     "
    ]
   },
