Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,7 @@
     "    destinations = []\n",
     "    for index in travel_destinations:\n",
     "        destinations.append(index[travel_destinations])\n",
-    "        money = len(destinations)\n",
+    "        len(destinations)\n",
     "        \n",
     "    return money\n",
     "     "
