--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,7 @@
    "outputs": [],
    "source": [
     "def next_up():\n",
-    "    travel_destinations\n",
+    "    travel_destinations[]\n",
     "    pass"
    ]
   },
