Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -102,6 +102,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def next_up():\n",
     "    pass"
    ]
