Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -104,8 +104,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def next_up():\n",
-    "    for countries in travel_destinations:\n",
-    "        "
+    "    return "
    ]
   },
   {
