--- a/index.ipynb
+++ b/index.ipynb
@@ -104,7 +104,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def next_up():\n",
-    "    return "
+    "    return travel_destinations[0]"
    ]
   },
   {
